chore: disable push triggers for data workflows to prevent conflicts

--- a/.github/workflows/update-sector-industry.yml
+++ b/.github/workflows/update-sector-industry.yml
@@ -6,12 +6,13 @@ on:
     - cron: '20 0 * * *'
   
   # 每次部署到 main 分支時執行
-  push:
-    branches: [ main ]
-    paths-ignore:
-      - 'README.md'
-      - 'docs/**'
-      - '*.md'
+  # 每次部署到 main 分支時執行
+  # push:
+  #   branches: [ main ]
+  #   paths-ignore:
+  #     - 'README.md'
+  #     - 'docs/**'
+  #     - '*.md'
   
   # 允許手動觸發
   workflow_dispatch:
