--- a/.github/workflows/dataroma_stock_update.yml
+++ b/.github/workflows/dataroma_stock_update.yml
@@ -24,7 +24,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+          pip install requests beautifulsoup4 yfinance
+
+      - name: Crawl Dataroma Managers (Sector Rotation)
+        run: |
+          echo "Processing Sector Rotation Data..."
+          python scripts/crawl_dataroma_managers.py
 
       - name: Crawl Dataroma Data
         run: |
@@ -42,10 +47,12 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add public/data/dataroma/*.json
+          git add public/data/smart_money_sector_rotation.json
+          git add public/data/stock_sector_map.json
           # Check for changes
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "data: Update Dataroma stock data [skip ci]"
+            git commit -m "data: Update Dataroma stock & sector rotation data [skip ci]"
             git push
           fi
