--- a/.github/workflows/update-metadata.yml
+++ b/.github/workflows/update-metadata.yml
@@ -1,20 +1,12 @@
-name: Update YFinance Metadata
+name: Weekly Metadata Update
 
 on:
+  # Every Sunday at 2:00 UTC
   # 每週日凌晨 2 點執行 (UTC)
   schedule:
     - cron: '0 2 * * 0'
   
-  # 每次部署到 main 分支時執行
-  # 每次部署到 main 分支時執行
-  # push:
-  #   branches: [ main ]
-  #   paths-ignore:
-  #     - 'README.md'
-  #     - 'docs/**'
-  #     - '*.md'
-  
-  # 允許手動觸發
+  # Manual trigger / 允許手動觸發
   workflow_dispatch:
     inputs:
       force_update:
@@ -41,13 +33,21 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install yfinance requests
+        pip install yfinance requests pandas
     
-    - name: Update YFinance Metadata (Python)
+    - name: Update Sector and Industry Data
       run: |
-        echo "🚀 Starting YFinance metadata update with Python..."
+        echo "🔄 Updating sector and industry data..."
+        echo "🔄 更新 Sector 和 Industry 資料..."
+        python scripts/update-sector-industry.py
+        echo "✅ Sector/Industry update completed"
+    
+    - name: Update YFinance Metadata
+      run: |
+        echo "🔄 Updating YFinance metadata..."
+        echo "🔄 更新 YFinance Metadata..."
         python scripts/update-metadata-python.py
-        echo "✅ YFinance metadata update completed"
+        echo "✅ Metadata update completed"
     
     - name: Check for changes
       id: changes
