feat: Add data validation script (scripts/validate-data.js) - Validates OHLCV, Fundamentals, Technical Indicators, Metadata - Add npm run validate:data command - Update DATA_OPERATIONS.md with validation docs

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "validate:data": "node scripts/validate-data.js",
     "update:sentiment": "python scripts/update_sentiment.py",
     "fetch:fundamentals": "node scripts/fetch-fundamentals.js"
   },
